spotless apply added
Signed-off-by: Aditya Machiroutu <amachiroutu@gmail.com>